# multiconverter

./: .gitignore  README.md  README_developer.md  prompt.md  pyproject.toml  workflow.puml
.github/workflows/: build-release.yml
src/: run_cmd.py  run_gui.py
src/multiconverter/: __init__.py  __main__.py  converter5.py  tools.py  xml_validator.py
src/multiconverter/gui/: __init__.py  __main__.py  main_app.py  question_editor.py  xml_display.py
src/multiconverter/templates/: assessmentItem_choiceInteraction.xml.jinja  assessmentItem_mapInteraction.xml.jinja  assessmentItem_textEntryInteraction.xml.jinja  error_xsd.txt.jinja  help.txt.jinja  imsmanifest.xml.jinja  imsmanifest_resource.xml.jinja  questions.xml.jinja
src/multiconverter/tests/: .gitignore  Makefile  demo_err.xml  demo_mcq_root.xml  test_demo_xml.py
src/multiconverter/xml/: llmquestions.xsd
tests/: .gitignore  Makefile  demo.xml  demo_fiq_root.xml  demo_mq_root.xml  test_demo_xml.py
