[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiconverter"
version = "0.5.0"
description = "Toolchain von großen Sprachmodellen zu Tests in itslearning"
readme = "README.md"
authors = [
    {name = "Hananja", email = "multiconverter@co.zeitloos.de"}
]
license = {text = "GPL"}
requires-python = ">=3.10"
dependencies = [
    "lxml~=6.0.1",
    "Jinja2~=3.1.6",
]

[project.urls]
Homepage = "https://github.com/hananja/multiconverter"
Repository = "https://github.com/hananja/multiconverter"

[project.scripts]
mein-projekt = "multiconverter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mein_projekt = [
    "templates/*",
    "xml/*",
]