[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiconverter"
version = "0.5.0"
description = "Toolchain von großen Sprachmodellen zu Tests in itslearning"
readme = "README.md"
authors = [
    {name = "Hananja", email = "multiconverter@co.zeitloos.de"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.1,<7.0",
    "Jinja2>=3.1.6,<4.0",
]

[project.urls]
Homepage = "https://github.com/hananja/multiconverter"
Repository = "https://github.com/hananja/multiconverter"

[project.scripts]
multiconverter = "multiconverter.main:main"

[tool.setuptools]
include-package-data = true  # Wichtig für package-data!

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"* " = [
    "templates/*",
    "xml/*",
]